--- a/main.css
+++ b/main.css
@@ -1,33 +1,86 @@
-.heading {
-  text-align: center;
-  text-transform: capitalize;
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+body {
+  text-align: justify;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.row::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.column {
+  float: left;
+  padding: 0 5px;
+}
+
+.heading{
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+
+}
+
+h3{
+    font-size: 1em;
+}
+
+@media (min-width: 1000px) {
+  .column {
+    width: 25%;
+  }
+  .heading{
+    
+    font-size: 10em;
+  }
+
+}
+
+@media (max-width: 1000px) and (min-width: 700px) {
+  .column {
+    width: 50%;
+  }
+  img{
+    height: 400px;
+  }
+  .heading{
+   
+    font-size: 5em;
+  }
 }
 
 @media (max-width: 700px) {
-  body {
-    background-color: #f55;
+  .column {
+    width: 100%;
   }
-  .heading {
-    color: aliceblue;
-    text-decoration: underline;
+  img {
+    height: 300px;
   }
-}
-
-@media (min-width: 700px) and (max-width: 1200px) {
-  body {
-    background-color: #d89;
-  }
-  .heading {
-    font-size: 5em;
-    color: #ff0;
+  .heading{
+    
+    font-size: 3em;
   }
 }
 
-@media (min-width: 1200px) {
-  body {
-    background-color: #123;
-  }
-  .heading {
-    font-size: 10em;
-  }
+@media(min-width:850px){
+    h3{
+        font-size: 2em;
+    }
 }
