--- a/main.css
+++ b/main.css
@@ -3,84 +3,36 @@
   margin: 0;
 }
 
-body {
-  text-align: justify;
-}
-
 .container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 10px;
+  height: 100%;
 }
 
-.row::after {
-  display: block;
-  content: "";
-  clear: both;
+html,
+body{
+    height:100% ;
 }
 
-img {
-  width: 100%;
-  height: 400px;
-  object-fit: cover;
-  object-position: center;
+section {
+  border: 3px solid black;
+  height: 500px;
+  margin: 50px;
+  display: flex;
+  gap: 10px;
+  height: 80%;
+  /* flex-direction: row is default*/
+  /* justify-content: (horizontal adjustment-row); can also use space*/
+  /* align-items: vertical adjustment-row; flipped for column*/
 }
 
-.column {
-  float: left;
-  padding: 0 5px;
-}
-
-.heading{
-    font-family: "Roboto", sans-serif;
-    text-align: center;
-    text-transform: uppercase;
-
-}
-
-h3{
-    font-size: 1em;
-}
-
-@media (min-width: 1000px) {
-  .column {
-    width: 25%;
-  }
-  .heading{
-    
-    font-size: 10em;
-  }
-
-}
-
-@media (max-width: 1000px) and (min-width: 700px) {
-  .column {
-    width: 50%;
-  }
-  img{
-    height: 400px;
-  }
-  .heading{
-   
-    font-size: 5em;
-  }
-}
-
-@media (max-width: 700px) {
-  .column {
-    width: 100%;
-  }
-  img {
-    height: 300px;
-  }
-  .heading{
-    
-    font-size: 3em;
-  }
-}
-
-@media(min-width:850px){
-    h3{
-        font-size: 2em;
-    }
+.box {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  text-align: center;
+  font-size: 5em;
+  color: antiquewhite;
+  line-height: 100px;
 }
