--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
 }
 
 .container {
@@ -11,31 +12,14 @@
 }
 
 html,
-body{
-    height:100% ;
+body {
+  height: 100%;
 }
 
-section {
-  border: 3px solid black;
-  height: 500px;
-  margin: 50px;
-  display: flex;
-  gap: 10px;
-  height: 80%;
-  flex-wrap: wrap;
-  /* flex-direction: row is default*/
-  /* justify-content: (horizontal adjustment-row); can also use space*/
-  /* align-items: vertical adjustment-row; flipped for column*/
-  /* align-content: ; is the whole thing, not individual items*/
-  align-content: center;
+a{
+    text-decoration: none;
+    color: black;
+    text-transform: capitalize;
 }
 
-.box {
-  width: 100px;
-  height: 100px;
-  background-color: red;
-  text-align: center;
-  font-size: 5em;
-  color: antiquewhite;
-  line-height: 100px;
-}
+
